# saphyr

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  garden.yaml  justfile
.github/workflows/: ci.yml
bench/: Cargo.toml  LICENSE  README.md  justfile
bench/tools/: README.md  run_bench.rs  time_parse.rs
bench/tools/bench_compare/: Cargo.toml
bench/tools/bench_compare/src/: main.rs
bench/tools/gen_large_yaml/: Cargo.toml
bench/tools/gen_large_yaml/src/: gen.rs  main.rs  nested.rs
examples/: dump_yaml.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse.rs
parser/: CHANGELOG.md  Cargo.toml  README.md  justfile
parser/src/: buffered_input.rs  char_traits.rs  debug.rs  emitter.rs  input.rs  lib.rs  parser.rs  scanner.rs  yaml.rs
parser/src/input/: buffered.rs  str.rs
parser/tests/: basic.rs  closing_bracket.rs  comment_intercepts_line.rs  emitter.rs  fuzz.rs  issues.rs  misplaced_flow_chars.rs  plain_scalar_indicators.rs  plain_tab.rs  reserved_directive.rs  span.rs  spec_test.rs  yaml-test-suite.rs
parser/tests/yaml-test-suite/.github/workflows/: test.yaml
parser/tools/: README.md  dump_events.rs  run_bench.rs  time_parse.rs
parser/tools/bench_compare/: README.md
parser/tools/bench_compare/src/: main.rs
parser/tools/gen_large_yaml/: Cargo.toml
parser/tools/walk/: Cargo.toml
parser/tools/walk/src/: main.rs
saphyr/: CHANGELOG.md  Cargo.toml  README.md  justfile
saphyr/.github/workflows/: ci.yml
saphyr/documents/: 2024-03-15-FirstRelease.md
saphyr/examples/: dump_yaml.rs
saphyr/src/: annotated.rs  char_traits.rs  emitter.rs  encoding.rs  event_emitter.rs  index.rs  lib.rs  loader.rs  macros.rs  parser.rs  scalar.rs  yaml.rs  yaml_owned.rs
saphyr/src/annotated/: marked_yaml.rs  marked_yaml_owned.rs  yaml_data.rs  yaml_data_owned.rs
saphyr/src/emitter/: event.rs
saphyr/tests/: basic.rs  closing_bracket.rs  emitter.rs  emitter_and_tags.rs  index.rs  line_numbers.rs  quickcheck.rs  spec_test.rs  tags.rs  test_round_trip.rs
saphyr/tools/gen_large_yaml/: Cargo.toml
saphyr/tools/gen_large_yaml/src/: main.rs
serde/: Cargo.toml  LICENSE  README.md
serde/.licenses/: Ethiraric-MIT
serde/examples/: simple.rs
serde/fuzz/: Cargo.toml
serde/fuzz/fuzz_targets/: fuzz_from_slice.rs
serde/src/: de.rs  error.rs  lib.rs  mapping.rs  number.rs  ser.rs  with.rs
serde/src/de/: deserializer.rs  mapping.rs  seq.rs  variant.rs
serde/src/ser/: escape_string.rs  serializer.rs
serde/src/tests/: de.rs  ser.rs
serde/src/value/: from.rs  index.rs  mod.rs  partial_eq.rs  ser.rs  tagged.rs
serde/tests/: test_de.rs  test_error.rs  test_serde.rs  test_value.rs
src/: annotated.rs  emitter.rs  encoding.rs  lib.rs  loader.rs  macros.rs  parser.rs  scanner.rs  yaml.rs
src/annotated/: marked_yaml.rs
src/fixtures/: multiline_string.yaml
tests/: basic.rs  emitter.rs  quickcheck.rs  spec_test.rs  test_round_trip.rs
