[profile.release]
lto = true

[workspace]
members = [
    "parser",
    "parser/tools/walk",
    "saphyr",
    "bench",
    "bench/tools/gen_large_yaml",
    "bench/tools/bench_compare",
    "fuzz",
]
resolver = "2"

[workspace.package]
authors = [
  "Ethiraric <ethiraric@gmail.com>",
  "David Aguilar <davvid@gmail.com>",
  "Yuheng Chen <yuhengchen@sensetime.com>"
]
documentation = "https://docs.rs/saphyr"
keywords = [ "yaml", "parser" ]
categories = [ "encoding", "parser-implementations" ]
license = "MIT OR Apache-2.0"
description = "A fully YAML 1.2 compliant YAML library"
repository = "https://github.com/saphyr-rs/saphyr"
readme = "README.md"
edition = "2024"
# Keep the rust-version in sync with the version used for lints and tests in .github/workflows/ci.yml
rust-version = "1.85.0"
version = "0.0.8"

[workspace.dependencies]
# Keep the saphyr-parser version in sync with workspace.package.version
saphyr-parser = { path = "parser", version = "0.0.8" }
arraydeque = { version = "0.5.1", default-features = false }
encoding_rs = { version = "0.8.35" }
# Keep in sync with hashlink to reduce dependency duplication
hashbrown = { version = "0.17", default-features = false, features = ["default-hasher"] }
hashlink = "0.12.0"
libtest-mimic = "0.8.2"
miette = { version = "7.6.0", features = ["fancy"] }
ordered-float = { version = "5.3.0", default-features = false }
quickcheck = "1.0"
rustyline = "17.0.2"
saphyr = { path = "saphyr" }
saphyr-bench = { path = "bench" }
thiserror = { version = "2.0.17", default-features = false }

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
