[package]
name = "saphyr-bench"
authors = [ "Ethiraric <ethiraric@gmail.com>" ]
description = "Utilities to benchmark saphyr"
license = "MIT"
readme = "README.md"
edition = { workspace = true }
version = { workspace = true }

[dependencies]
saphyr-parser = { workspace = true }

[[bin]]
name = "time_parse"
path = "tools/time_parse.rs"

[[bin]]
name = "run_bench"
path = "tools/run_bench.rs"
