[package]
name = "saphyr-fuzz"
version = { workspace = true }
publish = false
edition = "2021"
rust-version = "1.70.0"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
saphyr.workspace = true
saphyr-parser.workspace = true

[[bin]]
name = "parse"
path = "fuzz_targets/parse.rs"
test = false
doc = false
bench = false
