[package]
name = "saphyr-fuzz"
publish = false
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
saphyr = { workspace = true }
saphyr-parser = { workspace = true }

[[bin]]
name = "parse"
path = "fuzz_targets/parse.rs"
test = false
doc = false
bench = false
