[package]
name = "saphyr-parser"
version = "0.0.2"
authors = [
  "Yuheng Chen <yuhengchen@sensetime.com>",
  "Ethiraric <ethiraric@gmail.com>",
  "David Aguilar <davvid@gmail.com>"
]
documentation = "https://docs.rs/saphyr-parser"
keywords = [ "yaml", "parser", "deserialization" ]
categories = [ "encoding", "parser-implementations", "parsing" ]
license = "MIT OR Apache-2.0"
description = "A fully YAML 1.2 compliant YAML parser"
repository = "https://github.com/saphyr-rs/saphyr-parser"
readme = "README.md"
edition = "2021"
rust-version = "1.70.0"

[features]
debug_prints = []

[dependencies]
arraydeque = "0.5.1"
hashlink = "0.8"

[dev-dependencies]
libtest-mimic = "0.3.0"
quickcheck = "1.0"
saphyr = "0.0.1"

[profile.release-lto]
inherits = "release"
lto = true

[[test]]
name = "yaml-test-suite"
harness = false

[[bin]]
name = "dump_events"
path = "tools/dump_events.rs"

[[bin]]
name = "time_parse"
path = "tools/time_parse.rs"

[[bin]]
name = "run_bench"
path = "tools/run_bench.rs"
