[package]
name = "saphyr-parser"
readme = "README.md"
authors = { workspace = true }
categories = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[features]
debug_prints = []

[dependencies]
arraydeque = { workspace = true }
hashlink = { workspace = true }

[dev-dependencies]
libtest-mimic = { workspace = true }
quickcheck = { workspace = true }
saphyr = { workspace = true }

[[test]]
name = "yaml-test-suite"
harness = false

[[bin]]
name = "dump_events"
path = "tools/dump_events.rs"

[[bin]]
name = "time_parser_parse"
path = "tools/time_parse.rs"

[[bin]]
name = "run_parser_bench"
path = "tools/run_bench.rs"
