[package]
name = "saphyr"
authors = { workspace = true }
categories = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
version = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
exclude = [
  # We don't need the documents.
  "/documents",
]

[features]
default = [ "encoding" ]
encoding = [ "dep:encoding_rs" ]

[dependencies]
arraydeque = { workspace = true }
encoding_rs = { workspace = true, optional = true }
hashlink = { workspace = true }
ordered-float = { workspace = true }
saphyr-parser = { workspace = true }

[dev-dependencies]
quickcheck = { workspace = true }

[lints]
workspace = true
