[package]
name = "saphyr-serde"
readme = "README.md"
authors = [
  "David Tolnay <dtolnay@gmail.com>",
  "Ethiraric <ethiraric@gmail.com>",
  "David Aguilar <davvid@gmail.com>",
]
categories = ["encoding", "parser-implementations"]
description = "YAML data format for Serde"
documentation = "https://docs.rs/saphyr-serde/"
edition = { workspace = true }
keywords = ["yaml", "serde", "serialization"]
license = { workspace = true }
repository = { workspace = true }
rust-version = "1.64"
version = { workspace = true }

[dependencies]
indexmap = "2.2.1"
itoa = "1.0"
ryu = "1.0"
serde = "1.0.195"
unsafe-libyaml = "0.2.11"

[dev-dependencies]
anyhow = "1.0.79"
indoc = "2.0"
serde = { version = "1.0.195", features = ["derive"] }

[lib]
doc-scrape-examples = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]
