[package]
name = "saphyr-serde"
authors = [
  "Ethiraric <ethiraric@gmail.com>",
]
documentation = "https://docs.rs/saphyr-serde"
description = "A fully YAML 1.2 compliant serde implementation"
keywords = [ "yaml", "parser", "serde" ]

version.workspace = true
categories.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
saphyr.workspace = true
saphyr-parser.workspace = true
serde.workspace = true

[lints]
workspace = true
