[package]
name = "bench_compare"
publish = false
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
readme = "README.md"
description = "Run multiple YAML parsers and compare their times"
repository = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { version = "1.0.81", features = ["backtrace"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.32"
toml = "1.0"
