[package]
name = "gen_large_yaml"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
description = "A helper to generate large YAML files"
repository = { workspace = true }
readme = "README.md"
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
rand = { version = "0.8.5", features = [ "small_rng" ] }
lipsum = "0.9.0"
