[package]
name = "walk"
readme = "README.md"
authors = { workspace = true }
categories = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[features]
debug_prints = []

[dependencies]
hashlink = { workspace = true }
miette = { workspace = true }
rustyline = { workspace = true }
saphyr = { workspace = true }
thiserror = { workspace = true }
